1. Метод .of [#444080]