@@ -5,7 +5,6 @@ import static org.junit.Assert.*;
 import static org.hamcrest.core.Is.is;
 import java.util.List;
 import java.util.ArrayList;
-import java.util.Arrays;
 
 public class ConvertListTest {
 
@@ -14,7 +13,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
